log

Thu 14 Mar 2024 08:28:33 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
fb6deda
Thu 14 Mar 2024 08:30:07 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
3aa9d58
Thu 14 Mar 2024 08:36:33 PM UTC: 
 exercises.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   47 |   int *newArr = malloc(size * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
9771ac0
Thu 14 Mar 2024 08:39:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:47:8: error: unused variable ‘newArr’ [-Werror=unused-variable]
   47 |   int *newArr = malloc(size * sizeof(int));
      |        ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e89113e
Thu 14 Mar 2024 08:48:21 PM UTC: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: variable ‘temp’ set but not used [-Werror=unused-but-set-variable]
   29 |   int temp;
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:51:34: error: array subscript is not an integer
   51 |       if (arr[i] % 2 == 0) newArr[newSize] = arr[i];
      |                                  ^
cc1: all warnings being treated as errors
Compilation failed
56856d8
